force-app/main/default/objects/CJFW_ExcludedProduct__c/CJFW_ExcludedProduct__c.object-meta.xml
<CustomObject>
    <description>[P2] - 매출/채권 - 약정감가 - 제외 상품</description>
    <label>Excluded Product</label>
    <nameField>
        <displayFormat>EP{YY}{MM}{DD}{000000}</displayFormat>
        <label>Auto No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>