force-app/main/default/objects/CJFW_ExcludedProduct__c/fields/ContractDepreciationRequest__c.field-meta.xml
<CustomField>
    <fullName>ContractDepreciationRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>약정감가신청</description>
    <label>Contract Depreciation Request</label>
    <referenceTo>CJFW_ContractDepreciationRequest__c</referenceTo>
    <relationshipLabel>Excluded Product</relationshipLabel>
    <relationshipName>Excluded_Product</relationshipName>
    <type>Lookup</type>
</CustomField>