force-app/main/default/objects/CJFW_ExcludedProduct__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Excluded Product</relationshipLabel>
    <relationshipName>Excluded_Product</relationshipName>
    <type>Lookup</type>
</CustomField>