force-app/main/default/objects/CJFW_ExcludedProduct__c/fields/FM_CodeProduct__c.field-meta.xml
<CustomField>
    <fullName>FM_CodeProduct__c</fullName>
    <formula>&quot;(&quot; + Product__r.gd_no__c + &quot;) &quot; + HYPERLINK( Product__c , Product__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Code) Product</label>
    <type>Text</type>
</CustomField>