force-app/main/default/objects/CJFW_ExcludedProduct__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>상품</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Excluded Product</relationshipLabel>
    <relationshipName>Excluded_Product</relationshipName>
    <type>Lookup</type>
</CustomField>